# udemy-agents

3_crew/debate/output/: decide.md  oppose.md  propose.md
3_crew/debate/src/debate/: main.py
3_crew/nmap/: README.md  prompts.txt  pyproject.toml
3_crew/nmap/knowledge/: cve_mappings.txt  user_preference.txt
3_crew/nmap/reports/: nmap_report_192.168.1.24_20250915_175541.md
3_crew/nmap/src/nmap/: crew.py  main.py
3_crew/nmap/src/nmap/config/: agents.yaml  tasks.yaml
3_crew/nmap/src/nmap/tools/: cli.py  nmap_parser.py  report.py
