[project]
name = "nmap"
version = "0.1.0"
description = "nmap using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.186.1,<1.0.0"
]

[project.scripts]
nmap_crew = "nmap.main:run"
run_crew = "nmap.main:run"
train = "nmap.main:train"
replay = "nmap.main:replay"
test = "nmap.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
